// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFlyoutBody fullHeight 1`] = `
<div
  class="euiFlyoutBody emotion-euiFlyoutBody"
>
  <div
    aria-label="Flyout body"
    class="euiFlyoutBody__overflow emotion-euiFlyoutBody__overflow-noBanner"
    data-test-subj="euiFlyoutBodyOverflow"
    role="region"
    tabindex="0"
  >
    <div
      class="euiFlyoutBody__overflowContent emotion-euiFlyoutBody__overflowContent_fullHeight"
    />
  </div>
</div>
`;

exports[`EuiFlyoutBody is rendered 1`] = `
<div
  class="euiFlyoutBody testClass1 testClass2 emotion-euiFlyoutBody-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-label="aria-label"
    class="euiFlyoutBody__overflow emotion-euiFlyoutBody__overflow-noBanner"
    data-test-subj="euiFlyoutBodyOverflow"
    role="region"
    tabindex="0"
  >
    <div
      class="euiFlyoutBody__overflowContent emotion-EuiFlyoutBody"
    />
  </div>
</div>
`;
